# bandex

./: Cargo.toml  LICENSE  README.md  bandex-config.schema.json
configs-examples/: bandex-config-each.yaml  bandex-config-sao_carlos.yaml  bandex-config.yaml
src/: cli.rs  config.rs  display.rs  main.rs  parse_dwr.rs  request.rs  types.rs  utils.rs
