[package]
name = "bandex"
version = "2.0.0-alpha"
edition = "2021"
authors = ["Mocno <gustavo.correa.mogi@gmail.com>"]
description = "Mostra o cardápio dos restaurantes da USP"
keywords = ["CLI"]
categories = ["command-line-utilities"]
publish = false
readme = "README.md"
repository = "https://github.com/mocno/bandex"
license = "MIT"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
html-escape = "0.2.13"
regex = "1.11.1"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["full"] }
unescape = "0.1.0"
